ecos-citeckTheme-share/src/main/amp/web/themes/citeckTheme/presentation.css
/* ... */
.login input[type="text"],
.login input[type="password"]
{
   width: 260px;
   padding-left: 3px 10px;
}

.login label
{
   padding-bottom: 5px;
   display: inline-block;
}

.login .copy {
   display: none;
}

.login .yui-button
{
   margin-left: 1px;
   margin-top: 2px;
}

.login .form-fields .form-field > span.yui-button > .first-child > button {
   padding: 3px 10px;
}

.login .form-fields .form-field > span.yui-button > .first-child {
   border-radius: 3px;
}

.login .form-fields .form-field:last-child {
   margin-bottom: 0;
}

.login .form-fields {
   padding: 1em 0 0 0 !important;
}


/* share locale changer */

.login {
  position: relative;
}

.login #sharelocaleform {
  position: absolute;
  bottom: 1.5em;
  right: 1.5em;
  padding: 0;
  z-index: 100;
}

.login #sharelocaleform select {
  font-size: 13px;
  height: 24px;
  border-radius: 3px;
  background-color: white;
}

/* end share locale changer */


.theme-company-logo {
   height: 34px;
   width: 428px;
   background: transparent url(images/citeck-logo.png) no-repeat;
}

.theme-flow-arrow
{
   margin:  0;
   padding: 0;
  width: 50px;
   height: 98px;
   background: url(images/flow-arrow.png) no-repeat;
}

.balloon
{
   border-radius: 6px !important;
   padding: 10px 12px !important;
   font-size: 91%;
}

/* Meeting Places Code */

.docfolder-label
{
   overflow:auto;
}

.docfolder-input
{
   width: 203px;
   vertical-align: top;
   margin-top: 2px;
}

.tree-div
{
   height: 200px;
   overflow: auto;
   margin-left: 5px;
}

/** YUI component overrides */

.ygtvlabel, .ygtvlabel:link, .ygtvlabel:visited, .ygtvlabel:hover
{
   background-color: #fff;
   cursor: pointer;
   margin-left: 5px;
   text-decoration: none;
}

.yui-resize .yui-resize-handle-b {
   background-color: transparent;
}

/** Share component overrides */

.header .header-left
{
   margin-left: -160px;
}

.header .logo
{
   position: relative;
   left: 168px;
   top: 58px;
}

.header .header-left .logo-spacer
{
   border-right: 1px solid #ccc !important;
   height: 40px !important;
   width: 1px !important;
   margin: 0 !important;
   position: relative;
   left: 165px;
   top: 62px;
}

.header .app-items
{
   margin-left: 8px;
}

.header .app-items span.yui-button span.first-child button
{
   margin-bottom: 3px !important;
}

.header .user-items div.search-box
{
   border: 1px solid #ccc !important;
   top: 5px !important;
   padding: 2px;
}

.header .user-items div.search-box span.yui-button
{
   height: 21px !important;
}

.header .user-items div.yuimenu div.bd ul li.user-menuitem
{
   background: none !important;
   border-bottom: 1px solid #eee !important;
}

.header .app-items span.yui-button span.first-child button
{
   padding: 22px 4px 1px !important;
}

.header .yuimenu .bd
{
   margin-top: -2px !important;
}

.page-title div.links
{
   padding-top: 6px;
}

.node-header .node-path
{
   padding-top: 0 !important;
}

.node-header .status-banner
{
   margin-top: 0 !important;
   margin-bottom: 0.75em;
}


.node-header .node-action .onDownloadDocumentClick a {
   background-image: url(images/download.png) !important;
   background-position: left center !important;
   background-repeat: no-repeat;
   padding: 0 10px 0 20px !important;
}

.node-header .node-action .onDownloadDocumentClick a:hover {
   background-image: url(images/download-active.png) !important;
}

/** tweak width of global picker treeview to avoid wrap*/
.global-folder .treeview
{
   width: 31em !important;
}

.global-folder .site-picker a.selected,
.global-folder .container-picker a.selected,
.global-folder .site-picker a:active,
.global-folder .site-picker a:hover,
.global-folder .container-picker a:active,
.global-folder .container-picker a:hover
{
   background-color: #eee !important;
}

.global-folder .site-picker a,
.global-folder .container-picker a
{
   border-bottom: 1px solid #eee !important;
}

.global-folder .mode button
{
   color: #333 !important;
}

.users .header-bar
{
   font-family: Open Sans Bold, Arial, sans-serif;
   font-weight: normal !important;
   background-color: #eee !important;
   border-bottom: 1px solid #ccc !important;
   margin: 1.5em 1em 1em !important;
}

.profile {
  padding: 0 40px 0 25px;
}

.profile .viewcolumn .header-bar,
.profile form .header-bar {
   background-color: #394353 !important;
   border: none;
   margin: 0;
   color: white;
   padding: 10px 15px;
}

.profile form .header-bar {
  margin-bottom: 10px;
}

.profile .viewcolumn .sites, 
.profile .viewcolumn .content, 
.profile .viewcolumn .people {
   margin: 0 !important;
}

.profile .viewcolumn .content {
  margin-bottom: 15px !important;
}

.profile .fieldlabelright
{
   font-family: Open Sans Bold, Arial, sans-serif;
   font-weight: normal !important;
}

.profile .sites li.first, .profile .content li.first, .profile .people li.first {
   border-top: 0 none !important;
}

.profile .sites li, .profile .content li, .profile .people li
{
   border-top: 1px solid #ccc !important;
}

.profile .people li a
{
   font-family: Open Sans Bold, Arial, sans-serif;
   font-weight: normal !important;
}

.profile .row {
  padding: 0px 15px 10px 15px;
}

.profile .row input {
   background-color: white;
   padding: 5px;
   border: 1px solid #CCC;
   box-shadow: none;
}

.profile.password .row .label {
  padding-top: 5px;
}

.profile.notifications .row input[type="checkbox"] {
  margin-top: 15px;
  margin-left: 5px;
}

/* only target the user profile toolbar - not others e.g. doclib */
.toolbar.userprofile {
   padding: 0 30px 10px;
   margin: 0;
}

#bd .toolbar.userprofile {
  padding-top: 10px;
  padding-bottom: 10px;
}

.search .itemname a
{
   font-weight: normal !important;
   font-size: 139% !important;
}

.search .search-box input
{
   padding: 3.666px !important;
}

.search .search-sites
{
   padding-top: 0 !important;
}

.search .search-sites a.bold
{
   font-family: Open Sans Bold, Arial, sans-serif;
   font-weight: normal !important;
}
/* ... */

